--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,18 @@
 /db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
+log/*
+tmp/*
+#!/log/.keep
+#!/tmp/.keep
 
 # Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
+#/tmp/pids/*
+#!/tmp/pids/
+#!/tmp/pids/.keep
 
+.idea/
+vendor/
 
 /public/assets
 
